# miniGPT

./: .gitignore  README.md  attention.py  fetch_data.sh  gpt.py  inference.py  main.py  pyproject.toml  requirements.txt  train.py
configs/: config.yaml  gpt.yaml
src/: __init__.py  attention.py  decoder.py  emb.py  gpt.py  mlp.py  norm.py  rope.py  tokenizer.py
utils/: __init__.py  convert_txt_to_pq.py  data.py
