[project]
name = "miniGPT"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.7.0",
    "hydra-core>=1.3.2",
    "ipykernel>=7.2.0",
    "numpy>=2.4.2",
    "pyarrow>=23.0.1",
    "pyyaml>=6.0.3",
    "tiktoken>=0.12.0",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=5.3.0",
]
