[project]
name = "miniGPT"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hydra-core>=1.3.2",
    "markupsafe==2.1.5",
    "pyarrow>=23.0.1",
    "tiktoken>=0.12.0",
    "torch==2.7.1",
    "tqdm>=4.66.5",
]

[tool.uv]
# 指定 PyTorch 的索引
[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
